--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
 <body>
 	<div id="wrapper">
 		<canvas id="game"></canvas>
-		<div id="play">Press Enter to play</div>
-		<div id="playAgain">You <span id="statut"></span> (<span id="points"></span> points)<br>Press Enter to play again</div>
+		<div id="play">
+			Press Enter to play
+		</div>
+		<div id="playAgain">
+			You <span id="statut"></span> (<span id="points"></span> points)<br>
+			Press Enter to play again
+		</div>
 	</div>
 	<script type="text/javascript" src="js/snake.js"></script>
 </body>
